# sentinels-sensor-data

./: .fileignore  2025 CPUE vs Salinity.R  2025 Daily Salinity per Site.R  CODEOWNERS  LICENSE  Master_Stations.csv  README.md  ReformattingCode.R  config.yaml  instrument-log.csv  pyproject.toml  salCPUE.csv  salinity_daily.csv  station-log.csv
.github/workflows/: merge-to-production.yml  run-pytests.yml  sync-station-log.yaml  update-hakai-server-with-production.yaml
SeaStar_loggerMetaData/: DstS.ini  articUpdate.txt
SeaStar_loggerMetaData/Artic/: Release_README.txt  p1.c.x.PMEM  p1.c.x.XMEM
SeaStar_loggerMetaData/DST CTD/: S13688.INI  S13689.INI  S13774.INI  S13775.INI  S13822.INI  S13833.INI  S13849.INI  S13850.INI  S13851.INI  S13852.INI  S13853.INI  S13854.INI  S13855.INI  S13856.INI  S13857.INI  S13859.INI  S13864.INI  S13870.INI  S13883.INI
SeaStar_loggerMetaData/NMS/: MS-MID.INI  MS-ONL.INI  MS-RID.INI  S13850.NMS  S13851.NMS
docs/: data-dictionary.csv
hobo-data/2022/: PBS_21255261_20221118_rawdata.csv  PBS_21255261_20221118_rawdata.hobo  PSEC_21153573_2022-10-20_rawdata.hobo  PSEC_21153573_20221020_rawdata.csv  cortes_bay_21153572_20221020_rawdata.csv  cortes_bay_21153572_20221020_rawdata.hobo  cowichan_bay_21291007_20221121 _rawdata.csv  cowichan_bay_21291007_20221121 _rawdata.hobo  descanso_bay_21291010_20221020_rawdata.csv  (+27 more)
scripts/: CPUE vs Salinity.R  ReformattingCode.R  SalinityJumps.R  combining_salinity.R  join_master_station_to_station_log.py  salinity_jumps.R  salinity_validation.R
staroddi-data/: dtests.docx
(+593 files in other folders)
